Added selenium test to add user

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -31,7 +31,7 @@
           <input type="text" class="form-control" id="country" name="country">
         </div>
 
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button type="submit" id="submit" class="btn btn-primary">Add</button>
       </form>  
     </div>
   </div>
