--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             </table>
 
             <form action="/add_user" method="get">
-                <button type="submit">Add User</button>
+                <button type="submit" id="btn-add-user">Add User</button>
             </form>
         </div>
     </div>
